app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
header {
  margin: auto;
  text-align: center;
  font-weight: bold;
  font-size: 36px;
  width: 50%;
}

ul li {
  list-style: none;
  display: inline-block;
  font-size: 18px;
  padding: 5px;
}

h2 {
  margin: auto;
  text-align: center;
  font-weight: bold;
  width: 50%;
}

table {
  margin: auto;
  text-align: center;
  font-weight: bold;
}

#create-user {
  margin: auto;
  text-align: center;
  font-weight: bold;
  width: 100%;
}

#login {
  text-align: right;
  font-weight: bold;
  width: 98%;
}

#login-form {
  margin: auto;
  text-align: center;
  font-weight: bold;
  width: 100%;
}

#button {
  margin: auto;
  text-align: center;
  font-weight: bold;
  width: 98%;
}

#movie-search {
  margin: auto;
  text-align: center;
  font-weight: bold;
  width: 30%;
}

#user-info {
  margin: auto;
  text-align: center;
  font-weight: bold;
  width: 30%;
}

#top-rated-movies {
  margin: auto;
  text-align: center;
  width: 30%;
  display: inline;
}

#party {
  margin: auto;
  display: inline-flex;
  justify-content: space-between;
}

#vp-column {
  padding:5px;
  text-align: center;
  align: center;
}

